# uish

./: .gitignore  CMakeLists.txt  config.h.in  debug.c  debug.h  list.h  main.c  scan.h  scan.l  uish.c  uish.conf  uish.h  uish_version.h  update_cscope  valgrind_check
cmake/: flex.cmake
